# copilot-aidlc

./: README.md  knowledgebase.db  pyproject.toml
aidlc-docs/: aidlc-state.md  audit.md
aidlc-docs/construction/build-and-test/: build-and-test-summary.md  build-instructions.md  integration-test-instructions.md  unit-test-instructions.md
aidlc-docs/construction/plans/: favorites-code-generation-plan.md  knowledgebase-code-generation-plan.md  knowledgebase-functional-design-plan.md
aidlc-docs/inception/application-design/: application-design.md  component-dependency.md  component-methods.md  components.md  services.md
aidlc-docs/inception/plans/: application-design-plan.md  execution-plan.md  favorites-execution-plan.md  story-generation-plan.md  user-stories-assessment.md
aidlc-docs/inception/requirements/: favorites-requirement-questions.md  favorites-requirements.md  requirement-verification-questions.md  requirements.md
aidlc-docs/inception/user-stories/: personas.md  stories.md
app/: database.py  main.py  templating.py
app/models/: __init__.py  article.py  edit_log.py  favorite.py  tag.py  user.py
app/routes/: articles.py  auth.py  search.py
app/schemas/: article.py  user.py
app/services/: article_service.py  favorite_service.py  search_service.py  user_service.py
app/static/: style.css
app/templates/: base.html
app/templates/articles/: detail.html  (+2 more)
tests/: conftest.py  test_article_service.py  test_favorite_service.py  test_routes_articles.py  test_routes_auth.py  test_routes_search.py  test_search_service.py  test_user_service.py
(+11 files in other folders)
