[project]
name = "team-knowledgebase"
version = "0.1.0"
description = "A lightweight internal documentation tool for teams"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.12",
    "markdown>=3.7",
    "bleach>=6.2.0",
    "itsdangerous>=2.2.0",
]

[dependency-groups]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
]
